2009-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed the number of tracker request attempt from 5 to 2.
	* src/TrackerWatcherCommand.cc

2009-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use host and protocol in original URI, because URI selector
	selects URI based on original URI, not redirected one.
	* src/Request.cc

2009-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug which causes segmentation fault with tellWaiting
	XML-RPC method when BitTorrent download is waiting.  The key of
	BtRegistry is changed from info hash to GID, because it is
	registered per RequestGroup, not info hash.
	* src/BtRegistry.cc
	* src/BtRegistry.h
	* src/BtSetup.cc
	* src/ConsoleStatCalc.cc
	* src/InitiatorMSEHandshakeCommand.cc
	* src/PeerInitiateConnectionCommand.cc
	* src/PeerInteractionCommand.cc
	* src/PeerInteractionCommand.h
	* src/PeerReceiveHandshakeCommand.cc
	* src/RequestGroup.cc
	* src/XmlRpcMethodImpl.cc
	* test/BtRegistryTest.cc
	* test/XmlRpcMethodTest.cc

2009-11-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page for changeOption XML-RPC method.
	* doc/aria2c.1.txt

2009-11-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --bt-request-peer-speed-limit option to changeOption XML-RPC
	method.
	* src/XmlRpcMethod.cc

2009-11-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented about BitTorrent Magnet URI in man page.
	* doc/aria2c.1.txt

2009-11-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that trackers in BitTorrent Magnet URI are not
	inherited to generated RequestGroup.
	* src/UTMetadataPostDownloadHandler.cc
	* test/UTMetadataPostDownloadHandlerTest.cc

2009-11-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Prepended "[METADATA]" before dn.
	* src/bittorrent_helper.cc
	* test/BittorrentHelperTest.cc

2009-11-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
